feat(ui): add header, footer and dashboard components with base layout

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,10 @@ body {
   color: var(--body-text-color) !important;
   display: contents;
 }
+
+.bg-theme-secondary {
+  background-color: var(--secondary-color);
+}
+.text-theme-primary {
+  background-color: var(--primary-color);
+}
