--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1 class="text-danger">Angular</h1>
+<app-header></app-header>
+<div class="app-body">
+  <app-dashboard></app-dashboard>
+</div>
+<app-footer></app-footer>
