--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3 mb-3">
-      <div class="dash-card text-center">
+      <div class="dash-card text-center" routerLink="/categories">
         <div class="dash-icon mb-3">
           <i class="fa-solid fa-clipboard-list"></i>
         </div>
