--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -2,8 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <div class="site-logo">Sourav's Blog</div>
-        <p class="mb-2 mt-2">Copyright © 2026 Angular Blog Website.</p>
+        <div class="site-logo">{{ "SITE_LOGO" | translate }}</div>
+
+        <p class="mb-2 mt-2">
+          {{ "FOOTER_COPYRIGHT" | translate }}
+        </p>
       </div>
     </div>
   </div>
