--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,6 +1,9 @@
-<p>header works!</p>
 <header class="navbar navbar-expand-lg fixed-top bg-white">
   <div class="container justify-content-center">
-    <a href="#" class="site-logo">Sourav’s Blog</a>
+    <a href="#" class="site-logo">
+      {{ "SITE_LOGO" | translate }}
+    </a>
   </div>
 </header>
+
+<p>{{ "HEADER_WORKS" | translate }}</p>
