--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,8 +5,14 @@
         <div class="dash-icon mb-3">
           <i class="fa-solid fa-clipboard-list"></i>
         </div>
-        <h4 class="dash-title">Categories</h4>
-        <p class="dash-desc">Manage your category details here</p>
+
+        <h4 class="dash-title">
+          {{ "DASH_CATEGORIES_TITLE" | translate }}
+        </h4>
+
+        <p class="dash-desc">
+          {{ "DASH_CATEGORIES_DESC" | translate }}
+        </p>
       </div>
     </div>
   </div>
