--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -11,7 +11,12 @@
           </h3>
 
           <p class="text-center text-muted mb-4">
-            {{ "ADD_CATEGORY_SUBTITLE" | translate }}
+            {{
+              (editingCategory
+                ? "UPDATE_CATEGORY_SUBTITLE"
+                : "ADD_CATEGORY_SUBTITLE"
+              ) | translate
+            }}
           </p>
 
           <form
