--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,5 +15,21 @@
         </p>
       </div>
     </div>
+
+    <div class="col-md-3 mb-3">
+      <div class="dash-card text-center" routerLink="/posts">
+        <div class="dash-icon mb-3">
+          <i class="fa-solid fa-file-image"></i>
+        </div>
+
+        <h4 class="dash-title">
+          {{ "DASH_POST_TITLE" | translate }}
+        </h4>
+
+        <p class="dash-desc">
+          {{ "DASH_POST_DESC" | translate }}
+        </p>
+      </div>
+    </div>
   </div>
 </div>
