feat(add-post): auto-generate permalink from post title and bind to form input

--- a/src/app/posts/new-post/new-post.component.html
+++ b/src/app/posts/new-post/new-post.component.html
@@ -25,6 +25,7 @@
                 type="text"
                 class="form-control form-control-lg"
                 placeholder="{{ 'POST_TITLE_PLACEHOLDER' | translate }}"
+                (keyup)="onTitleChange($event)"
               />
             </div>
 
@@ -37,6 +38,9 @@
                 type="text"
                 class="form-control form-control-lg"
                 placeholder="{{ 'POST_PERMALINK_PLACEHOLDER' | translate }}"
+                [(ngModel)]="permalink"
+                name="permalink"
+                readonly
               />
             </div>
 
