--- a/src/app/posts/all-post/all-post.component.html
+++ b/src/app/posts/all-post/all-post.component.html
@@ -77,6 +77,7 @@
                         class="btn btn-sm btn-light shadow-sm table-action-btn"
                         title="{{ 'EDIT' | translate }}"
                         aria-label="Edit post"
+                        [routerLink]="['/posts/edit', post.id]"
                       >
                         <i class="fa-solid fa-pen"></i>
                       </button>
