--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,39 +1,42 @@
-.dash-card {
-  padding: 2rem;
-  background: #ffffff;
-  border-radius: 16px;
-  box-shadow: 0 5px 18px rgba(0, 0, 0, 0.08);
-  transition: all 0.3s ease;
-  border: 1px solid #ececec;
-  cursor: pointer;
+.container {
+  min-height: 65vh;
+  .dash-card {
+    padding: 2rem;
+    background: #ffffff;
+    border-radius: 16px;
+    box-shadow: 0 5px 18px rgba(0, 0, 0, 0.08);
+    transition: all 0.3s ease;
+    border: 1px solid #ececec;
+    cursor: pointer;
 
-  &:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
-    border-color: var(--primary-color);
+    &:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+      border-color: var(--primary-color);
+    }
   }
-}
 
-.dash-icon {
-  font-size: 2.5rem;
-  color: var(--primary-color);
-  background: rgba(89, 99, 146, 0.12);
-  width: 65px;
-  height: 65px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-}
+  .dash-icon {
+    font-size: 2.5rem;
+    color: var(--primary-color);
+    background: rgba(89, 99, 146, 0.12);
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
 
-.dash-title {
-  font-weight: 700;
-  color: var(--primary-color);
-  margin-bottom: 0.4rem;
-}
+  .dash-title {
+    font-weight: 700;
+    color: var(--primary-color);
+    margin-bottom: 0.4rem;
+  }
 
-.dash-desc {
-  color: var(--body-text-color);
-  font-size: 0.95rem;
+  .dash-desc {
+    color: var(--body-text-color);
+    font-size: 0.95rem;
+  }
 }
